--- a/12ColladaViewer-animation/12ColladaViewer-animation.vcxproj
+++ b/12ColladaViewer-animation/12ColladaViewer-animation.vcxproj
@@ -88,7 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>glm;..\OpenGL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\OpenGL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -119,7 +119,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>glm;..\OpenGL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\OpenGL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -148,52 +148,50 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AnimatedModel\AnimatedMesh.h" />
-    <ClInclude Include="AnimatedModel\AnimatedModel.h" />
-    <ClInclude Include="AnimatedModel\Texture.h" />
-    <ClInclude Include="Animator\Animation.h" />
-    <ClInclude Include="Animator\Animator.h" />
+    <ClInclude Include="Animation\AnimatedModel\AnimatedMesh.h" />
+    <ClInclude Include="Animation\AnimatedModel\AnimatedModel.h" />
+    <ClInclude Include="Animation\AnimatedModel\Texture.h" />
+    <ClInclude Include="Animation\Animator\Animation.h" />
+    <ClInclude Include="Animation\Animator\Animator.h" />
+    <ClInclude Include="Animation\ColladaLoader\ColladaLoader.h" />
+    <ClInclude Include="Animation\Render\AnimationShader.h" />
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="ColladaLoader\ColladaLoader.h" />
-    <ClInclude Include="deps\stb_image.h" />
     <ClInclude Include="Depthmap.h" />
     <ClInclude Include="Extension.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelMatrix.h" />
     <ClInclude Include="Object.h" />
-    <ClInclude Include="Render\AnimationShader.h" />
-    <ClInclude Include="Render\Shader2.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Skybox.h" />
-    <ClInclude Include="tinyxml\tinystr.h" />
-    <ClInclude Include="tinyxml\tinyxml.h" />
+    <ClInclude Include="Third\deps\stb_image.h" />
+    <ClInclude Include="Third\tinyxml\tinystr.h" />
+    <ClInclude Include="Third\tinyxml\tinyxml.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AnimatedModel\AnimatedMesh.cpp" />
-    <ClCompile Include="AnimatedModel\AnimatedModel.cpp" />
-    <ClCompile Include="AnimatedModel\Texture.cpp" />
-    <ClCompile Include="Animator\Animation.cpp" />
-    <ClCompile Include="Animator\Animator.cpp" />
+    <ClCompile Include="Animation\AnimatedModel\AnimatedMesh.cpp" />
+    <ClCompile Include="Animation\AnimatedModel\AnimatedModel.cpp" />
+    <ClCompile Include="Animation\AnimatedModel\Texture.cpp" />
+    <ClCompile Include="Animation\Animator\Animation.cpp" />
+    <ClCompile Include="Animation\Animator\Animator.cpp" />
+    <ClCompile Include="Animation\ColladaLoader\ColladaLoader.cpp" />
+    <ClCompile Include="Animation\Render\AnimationShader.cpp" />
     <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="ColladaLoader\ColladaLoader.cpp" />
-    <ClCompile Include="deps\stb_image.c" />
     <ClCompile Include="Depthmap.cpp" />
     <ClCompile Include="Extension.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelMatrix.cpp" />
     <ClCompile Include="Object.cpp" />
-    <ClCompile Include="Render\AnimationShader.cpp" />
-    <ClCompile Include="Render\Shader2.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
-    <ClCompile Include="tinyxml\tinystr.cpp" />
-    <ClCompile Include="tinyxml\tinyxml.cpp" />
-    <ClCompile Include="tinyxml\tinyxmlerror.cpp" />
-    <ClCompile Include="tinyxml\tinyxmlparser.cpp" />
+    <ClCompile Include="Third\deps\stb_image.c" />
+    <ClCompile Include="Third\tinyxml\tinystr.cpp" />
+    <ClCompile Include="Third\tinyxml\tinyxml.cpp" />
+    <ClCompile Include="Third\tinyxml\tinyxmlerror.cpp" />
+    <ClCompile Include="Third\tinyxml\tinyxmlparser.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
