improve opengl render calls

--- a/10OBJViewer-subsurface-scattering/10OBJViewer-subsurface-scattering.vcxproj
+++ b/10OBJViewer-subsurface-scattering/10OBJViewer-subsurface-scattering.vcxproj
@@ -152,12 +152,12 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Depthmap.h" />
     <ClInclude Include="Extension.h" />
-    <ClInclude Include="Model.h" />
     <ClInclude Include="ModelMatrix.h" />
-    <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjModel.h" />
     <ClInclude Include="Quad.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Skybox.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
@@ -166,12 +166,12 @@
     <ClCompile Include="Depthmap.cpp" />
     <ClCompile Include="Extension.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelMatrix.cpp" />
-    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="ObjModel.cpp" />
     <ClCompile Include="Quad.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
